overlays/eventbrite/frontend/sourcegraph-frontend.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sourcegraph-frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-dns01"
spec:
  tls:
  - hosts:
    - sourcegraph.example.com
    secretName: sourcegraph-tls
